--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css">
-    <title>Verify IQ Loan Origination Site</title>
+    <title>LaunchDarkly Loan Origination System</title>
 </head>
 
 <body>
